--- a/src/index.less
+++ b/src/index.less
@@ -6,5 +6,17 @@ body, html{
   box-sizing: border-box;
 }
 
+label {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  display: inline-flex;
+  align-items: center;
+  justify-content: end;
+
+  &>.colon {
+    margin: 0 4px;
+  }
+}
 
 // 控件单元高度 32px (包含border)
