--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -36,6 +36,14 @@ input {
   min-height: 40px;
 }
 
+body {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
 h1,
 h2,
 h3,
@@ -52,8 +60,37 @@ body {
 
 .main {
   display: grid;
-  grid-template-columns: 15vw 1fr;
+  grid-template-columns: 60px 1fr;
+  // grid-template-columns: 10vw 1fr;
   gap: 0;
+}
+
+.scrollbar() {
+
+  /* 滚动条整体 */
+  &::-webkit-scrollbar {
+    height: 10px;
+    width: 10px;
+  }
+
+  /* 两个滚动条交接处 -- x轴和y轴 */
+  &::-webkit-scrollbar-corner {
+    background-color: transparent;
+  }
+
+  /* 滚动条滑块 */
+  &::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+    background: #535353;
+  }
+
+  /* 滚动条轨道 */
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+    border-radius: 12px;
+    background: transparent;
+  }
 }
 
 aside.menu {
@@ -63,6 +100,15 @@ aside.menu {
   padding: 5px;
   padding-top: 15px;
   color: #c5c5c5;
+  height: 100vh;
+  overflow-y: auto;
+
+  // &,
+  // & * {
+  //   transition: all 5s ease-in-out;
+  // }
+
+  .scrollbar();
 
   &>a {
     color: #eee;
@@ -91,8 +137,33 @@ aside.menu {
 }
 
 
+
+
 .docs-component-content {
   padding: 5px 10px;
+  height: 100vh;
+  overflow-y: auto;
+
+  .scrollbar();
+
+  .header {
+    &>button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 32px;
+      height: 32px;
+      padding: 0;
+      margin: 0;
+      border-width: 0;
+      color: #c5c5c5;
+      background-color: transparent;
+
+      &:hover {
+        background-color: #1f1f1f;
+      }
+    }
+  }
 
   &>div {
     * {
