--- a/src/layout/route/index.less
+++ b/src/layout/route/index.less
@@ -1,63 +1,3 @@
-.unit-testing-container {
-
-  .unit-testing-unit {
-    break-inside: avoid;
-  }
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-button {
-  text-transform: capitalize;
-  margin-bottom: 4px;
-}
-
-input {
-  display: inline-block;
-}
-
-button {
-  background-color: #c5c5c5;
-  padding: 5px 10px;
-}
-
-button,
-input {
-  min-height: 40px;
-}
-
-body {
-  position: fixed;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin-bottom: 12px;
-  margin-top: 4px;
-}
-
-body {
-  background-color: #111111;
-}
-
 .scrollbar() {
 
   /* 滚动条整体 */
@@ -125,8 +65,7 @@ aside.menu {
     text-overflow: ellipsis;
     font-weight: bold;
     font-size: small;
-    transition: all .6s ease-in-out;
-    transition: color, background .3s ease-in-out;
+    transition: all .45s ease-in-out;
 
     &.fold {
       text-align: center;
@@ -159,8 +98,16 @@ aside.menu {
     transition: all .2s ease-in-out;
     background-color: #111;
 
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
     &.fold {
       margin-left: 60px;
+    }
+
+    &>h2 {
+      padding-right: 10px;
     }
 
     &>button {
