fix: 修复打包错误配置, 导致使用失败

--- a/src/layout/route/index.less
+++ b/src/layout/route/index.less
@@ -109,11 +109,11 @@ aside.menu {
       margin-left: 60px;
     }
 
-    &>h2 {
+    & h2 {
       padding-right: 10px;
     }
 
-    &>button {
+    & button {
       display: flex;
       justify-content: center;
       align-items: center;
