--- a/src/index.less
+++ b/src/index.less
@@ -6,7 +6,7 @@ body, html{
   box-sizing: border-box;
 }
 
-label {
+.ut-label {
   display: inline-block;
   height: 100%;
   vertical-align: middle;
