feat: 修复样式污染问题

--- a/src/index.less
+++ b/src/index.less
@@ -1,7 +1,9 @@
-body, html{
+body,
+html {
   margin: 0;
   padding: 0;
 }
+
 * {
   box-sizing: border-box;
 }
@@ -16,5 +18,24 @@ body, html{
 
   &>.colon {
     margin: 0 4px;
+  }
+}
+
+.ut {
+
+  button,
+  input {
+    border-width: 2px;
+    padding: 8px 12px;
+    margin: 4px 4px 4px 0;
+  }
+
+  button {
+    background-color: #353535;
+
+    &:hover {
+      color: #9afc8d;
+      background-color: #434343;
+    }
   }
 }
