feat: 修复样式污染问题

--- a/src/index.less
+++ b/src/index.less
@@ -21,21 +21,19 @@ html {
   }
 }
 
-.ut {
 
-  button,
-  input {
-    border-width: 2px;
-    padding: 8px 12px;
-    margin: 4px 4px 4px 0;
-  }
+.ut-input {
+  border-width: 2px;
+  padding: 8px 12px;
+  margin: 4px 4px 4px 0;
+}
 
-  button {
-    background-color: #353535;
+.ut-btn {
+  border-width: 2px;
+  background-color: #353535;
 
-    &:hover {
-      color: #9afc8d;
-      background-color: #434343;
-    }
+  &:hover {
+    color: #9afc8d;
+    background-color: #434343;
   }
 }
